# SPICA

./: README.md  pyproject.toml
SPICA/: app.py
SPICA/tools/: image_utils.py  utils.py  venezia_library.py
example/: example_app.ipynb
